<resources>
    <string name="app_name">CarServices</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="admin_nav_users">Users</string>
    <string name="admin_nav_car_services">Car Services</string>
    <string name="title_activity_admin_car_services">AdminCarServicesActivity</string>

    <string name="admin_user_add_first_name_hint">First name</string>
    <string name="admin_user_add_last_name_hint">Last name</string>
    <string name="admin_user_add_username_hint">Username</string>
    <string name="admin_user_add_password_hint">Password</string>
    <string name="admin_user_add_address_hint">Address</string>
    <string name="admin_user_add_email_hint">Email</string>
    <string name="admin_user_add_phone_hint">Phone</string>
    <string name="title_activity_user_base">UserBaseActivity</string>
    <string name="title_activity_car_service_base">CarServiceBaseActivity</string>

    <string name="car_service_description">Description</string>
    <string name="car_service_price">Price</string>
</resources>
