<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_change_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10pt"
    tools:context="com.example.dprtenjaca.carservices.UserChangeDataActivity">

    <EditText
        android:id="@+id/editTextUserChangeDataFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_first_name_hint"/>

    <EditText
        android:id="@+id/editTextUserChangeDataLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_last_name_hint"/>

    <EditText
        android:id="@+id/editTextUserChangeDataUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_username_hint" />

    <EditText
        android:id="@+id/editTextUserChangeDataPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/editTextUserChangeDataAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_address_hint"
        android:inputType="textPostalAddress"/>

    <EditText
        android:id="@+id/editTextUserChangeDataEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_email_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editTextUserChangeDataPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user_add_phone_hint"
        android:inputType="phone"/>

    <Button
        android:id="@+id/buttonUserChangeDataSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="SUBMIT"/>

</LinearLayout>
